backend avanzado v13.8 (estable, con bitácora, alertas)